--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="https://use.fontawesome.com/775f428177.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
 
@@ -21,9 +22,14 @@
       </ul>
     </nav>
 
-    <div>
-      <input type="text" placeholder="SEARCH">
-    </div>
+    <section class="bar">
+      <div class="search">
+        <input placeholder="SEARCH">
+      </div>
+      <div>
+        <i class="fa fa-search" aria-hidden="true"></i>
+      </div>
+    </section>
 
     <section class="middle">
       <div class="lemon">
